--- a/resource/twittperator-sidebar.html
+++ b/resource/twittperator-sidebar.html
@@ -6,6 +6,7 @@
   <script src='./vue.min.js'></script>
   <script src='./twitter-text-1.13.0.min.js'></script>
   <script src='./twemoji.min.js'></script>
+  <script src='./lodash.core.min.js'></script>
   <script src='./twittperator-sidebar.js'></script>
   <title>Twittperator Sidebar</title>
 </head>
